// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateTimePicker > renders the action bar with the "Today" button 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-1uent87-MuiButtonBase-root-MuiButton-root"
  tabindex="0"
  type="button"
>
  Today
</button>
`;

exports[`DateTimePicker > renders without errors 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiPickersTextField-root Mui-required css-19y0qf7-MuiFormControl-root-MuiPickersTextField-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-113d811-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="true"
            for="«r0»"
            id="«r0»-label"
          >
            Test
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ljffdk-MuiFormLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            aria-invalid="false"
            aria-labelledby="«r0»-label"
            class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-fullWidth MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd css-1hgcujo-MuiPickersInputBase-root-MuiPickersOutlinedInput-root"
            role="group"
          >
            <div
              class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-1fb7els-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer-MuiPickersOutlinedInput-sectionsContainer"
              contenteditable="false"
              tabindex="0"
            >
              <span
                class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
                data-sectionindex="0"
              >
                <span
                  class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
                <span
                  aria-disabled="false"
                  aria-label="Month"
                  aria-labelledby="«r1»-month"
                  aria-readonly="false"
                  aria-valuemax="12"
                  aria-valuemin="1"
                  aria-valuenow="10"
                  aria-valuetext="October"
                  autocapitalize="off"
                  autocorrect="off"
                  class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                  contenteditable="true"
                  id="«r1»-month"
                  inputmode="numeric"
                  role="spinbutton"
                  spellcheck="false"
                  tabindex="0"
                >
                  10
                </span>
                <span
                  class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                >
                  /
                </span>
              </span>
              <span
                class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
                data-sectionindex="1"
              >
                <span
                  class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
                <span
                  aria-disabled="false"
                  aria-label="Day"
                  aria-labelledby="«r1»-day"
                  aria-readonly="false"
                  aria-valuemax="31"
                  aria-valuemin="1"
                  aria-valuenow="18"
                  aria-valuetext="18th"
                  autocapitalize="off"
                  autocorrect="off"
                  class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                  contenteditable="true"
                  id="«r1»-day"
                  inputmode="numeric"
                  role="spinbutton"
                  spellcheck="false"
                  tabindex="-1"
                >
                  18
                </span>
                <span
                  class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                >
                  /
                </span>
              </span>
              <span
                class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
                data-sectionindex="2"
              >
                <span
                  class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
                <span
                  aria-disabled="false"
                  aria-label="Year"
                  aria-labelledby="«r1»-year"
                  aria-readonly="false"
                  aria-valuemax="9999"
                  aria-valuemin="0"
                  aria-valuenow="2019"
                  autocapitalize="off"
                  autocorrect="off"
                  class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                  contenteditable="true"
                  id="«r1»-year"
                  inputmode="numeric"
                  role="spinbutton"
                  spellcheck="false"
                  tabindex="-1"
                >
                  2019
                </span>
                <span
                  class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                >
                   
                </span>
              </span>
              <span
                class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
                data-sectionindex="3"
              >
                <span
                  class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
                <span
                  aria-disabled="false"
                  aria-label="Hours"
                  aria-labelledby="«r1»-hours"
                  aria-readonly="false"
                  aria-valuemax="12"
                  aria-valuemin="1"
                  aria-valuenow="12"
                  autocapitalize="off"
                  autocorrect="off"
                  class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                  contenteditable="true"
                  id="«r1»-hours"
                  inputmode="numeric"
                  role="spinbutton"
                  spellcheck="false"
                  tabindex="-1"
                >
                  12
                </span>
                <span
                  class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                >
                  :
                </span>
              </span>
              <span
                class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
                data-sectionindex="4"
              >
                <span
                  class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
                <span
                  aria-disabled="false"
                  aria-label="Minutes"
                  aria-labelledby="«r1»-minutes"
                  aria-readonly="false"
                  aria-valuemax="59"
                  aria-valuemin="0"
                  aria-valuenow="0"
                  autocapitalize="off"
                  autocorrect="off"
                  class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                  contenteditable="true"
                  id="«r1»-minutes"
                  inputmode="numeric"
                  role="spinbutton"
                  spellcheck="false"
                  tabindex="-1"
                >
                  00
                </span>
                <span
                  class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                >
                   
                </span>
              </span>
              <span
                class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
                data-sectionindex="5"
              >
                <span
                  class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
                <span
                  aria-disabled="false"
                  aria-label="Meridiem"
                  aria-labelledby="«r1»-meridiem"
                  aria-readonly="false"
                  aria-valuemax="1"
                  aria-valuemin="0"
                  aria-valuenow="0"
                  autocapitalize="off"
                  autocorrect="off"
                  class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                  contenteditable="true"
                  id="«r1»-meridiem"
                  inputmode="text"
                  role="spinbutton"
                  spellcheck="false"
                  tabindex="-1"
                >
                  AM
                </span>
                <span
                  class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
              </span>
            </div>
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
            >
              <button
                aria-label="Choose date, selected date is Oct 18, 2019"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1ysp02-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="CalendarIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                  />
                </svg>
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiPickersOutlinedInput-notchedOutline css-lqwr9g-MuiPickersOutlinedInput-notchedOutline"
            >
              <legend
                class="css-kg5swy"
              >
                <span
                  class="css-w48gsk"
                >
                  Test
                   
                  *
                </span>
              </legend>
            </fieldset>
            <input
              aria-hidden="true"
              class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-31lcvl-MuiPickersInputBase-input"
              id="«r0»"
              name="date"
              required=""
              tabindex="-1"
              value="10/18/2019 12:00 AM"
            />
          </div>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
          data-testid="submit"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth MuiPickersTextField-root Mui-required css-19y0qf7-MuiFormControl-root-MuiPickersTextField-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-113d811-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
          for="«r0»"
          id="«r0»-label"
        >
          Test
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1ljffdk-MuiFormLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          aria-invalid="false"
          aria-labelledby="«r0»-label"
          class="MuiPickersInputBase-root MuiPickersOutlinedInput-root MuiPickersInputBase-fullWidth MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd css-1hgcujo-MuiPickersInputBase-root-MuiPickersOutlinedInput-root"
          role="group"
        >
          <div
            class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-1fb7els-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer-MuiPickersOutlinedInput-sectionsContainer"
            contenteditable="false"
            tabindex="0"
          >
            <span
              class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
              data-sectionindex="0"
            >
              <span
                class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
              <span
                aria-disabled="false"
                aria-label="Month"
                aria-labelledby="«r1»-month"
                aria-readonly="false"
                aria-valuemax="12"
                aria-valuemin="1"
                aria-valuenow="10"
                aria-valuetext="October"
                autocapitalize="off"
                autocorrect="off"
                class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                contenteditable="true"
                id="«r1»-month"
                inputmode="numeric"
                role="spinbutton"
                spellcheck="false"
                tabindex="0"
              >
                10
              </span>
              <span
                class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              >
                /
              </span>
            </span>
            <span
              class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
              data-sectionindex="1"
            >
              <span
                class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
              <span
                aria-disabled="false"
                aria-label="Day"
                aria-labelledby="«r1»-day"
                aria-readonly="false"
                aria-valuemax="31"
                aria-valuemin="1"
                aria-valuenow="18"
                aria-valuetext="18th"
                autocapitalize="off"
                autocorrect="off"
                class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                contenteditable="true"
                id="«r1»-day"
                inputmode="numeric"
                role="spinbutton"
                spellcheck="false"
                tabindex="-1"
              >
                18
              </span>
              <span
                class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              >
                /
              </span>
            </span>
            <span
              class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
              data-sectionindex="2"
            >
              <span
                class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
              <span
                aria-disabled="false"
                aria-label="Year"
                aria-labelledby="«r1»-year"
                aria-readonly="false"
                aria-valuemax="9999"
                aria-valuemin="0"
                aria-valuenow="2019"
                autocapitalize="off"
                autocorrect="off"
                class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                contenteditable="true"
                id="«r1»-year"
                inputmode="numeric"
                role="spinbutton"
                spellcheck="false"
                tabindex="-1"
              >
                2019
              </span>
              <span
                class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              >
                 
              </span>
            </span>
            <span
              class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
              data-sectionindex="3"
            >
              <span
                class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
              <span
                aria-disabled="false"
                aria-label="Hours"
                aria-labelledby="«r1»-hours"
                aria-readonly="false"
                aria-valuemax="12"
                aria-valuemin="1"
                aria-valuenow="12"
                autocapitalize="off"
                autocorrect="off"
                class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                contenteditable="true"
                id="«r1»-hours"
                inputmode="numeric"
                role="spinbutton"
                spellcheck="false"
                tabindex="-1"
              >
                12
              </span>
              <span
                class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              >
                :
              </span>
            </span>
            <span
              class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
              data-sectionindex="4"
            >
              <span
                class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
              <span
                aria-disabled="false"
                aria-label="Minutes"
                aria-labelledby="«r1»-minutes"
                aria-readonly="false"
                aria-valuemax="59"
                aria-valuemin="0"
                aria-valuenow="0"
                autocapitalize="off"
                autocorrect="off"
                class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                contenteditable="true"
                id="«r1»-minutes"
                inputmode="numeric"
                role="spinbutton"
                spellcheck="false"
                tabindex="-1"
              >
                00
              </span>
              <span
                class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              >
                 
              </span>
            </span>
            <span
              class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
              data-sectionindex="5"
            >
              <span
                class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
              <span
                aria-disabled="false"
                aria-label="Meridiem"
                aria-labelledby="«r1»-meridiem"
                aria-readonly="false"
                aria-valuemax="1"
                aria-valuemin="0"
                aria-valuenow="0"
                autocapitalize="off"
                autocorrect="off"
                class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                contenteditable="true"
                id="«r1»-meridiem"
                inputmode="text"
                role="spinbutton"
                spellcheck="false"
                tabindex="-1"
              >
                AM
              </span>
              <span
                class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
            </span>
          </div>
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
          >
            <button
              aria-label="Choose date, selected date is Oct 18, 2019"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1ysp02-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CalendarIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                />
              </svg>
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="MuiPickersOutlinedInput-notchedOutline css-lqwr9g-MuiPickersOutlinedInput-notchedOutline"
          >
            <legend
              class="css-kg5swy"
            >
              <span
                class="css-w48gsk"
              >
                Test
                 
                *
              </span>
            </legend>
          </fieldset>
          <input
            aria-hidden="true"
            class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-31lcvl-MuiPickersInputBase-input"
            id="«r0»"
            name="date"
            required=""
            tabindex="-1"
            value="10/18/2019 12:00 AM"
          />
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
        data-testid="submit"
        tabindex="0"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DateTimePicker > turns red if empty and required 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        novalidate=""
      >
        <div
          class="MuiFormControl-root MuiFormControl-fullWidth MuiPickersTextField-root Mui-required css-19y0qf7-MuiFormControl-root-MuiPickersTextField-root"
        >
          <label
            class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-19qnlrw-MuiFormLabel-root-MuiInputLabel-root"
            data-shrink="false"
            for="«rk»"
            id="«rk»-label"
          >
            Test
            <span
              aria-hidden="true"
              class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error css-1ljffdk-MuiFormLabel-asterisk"
            >
               
              *
            </span>
          </label>
          <div
            aria-describedby="«rk»-helper-text"
            aria-invalid="true"
            aria-labelledby="«rk»-label"
            aria-live="polite"
            class="MuiPickersInputBase-root MuiPickersOutlinedInput-root Mui-error MuiPickersInputBase-fullWidth MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd css-1hgcujo-MuiPickersInputBase-root-MuiPickersOutlinedInput-root"
            role="group"
          >
            <div
              class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-qru2u2-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer-MuiPickersOutlinedInput-sectionsContainer"
              contenteditable="false"
              tabindex="0"
            >
              <span
                class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
                data-sectionindex="0"
              >
                <span
                  class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
                <span
                  aria-disabled="false"
                  aria-label="Month"
                  aria-labelledby="«rl»-month"
                  aria-readonly="false"
                  aria-valuemax="12"
                  aria-valuemin="1"
                  aria-valuetext="Empty"
                  autocapitalize="off"
                  autocorrect="off"
                  class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                  contenteditable="true"
                  id="«rl»-month"
                  inputmode="numeric"
                  role="spinbutton"
                  spellcheck="false"
                  tabindex="0"
                >
                  MM
                </span>
                <span
                  class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                >
                  /
                </span>
              </span>
              <span
                class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
                data-sectionindex="1"
              >
                <span
                  class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
                <span
                  aria-disabled="false"
                  aria-label="Day"
                  aria-labelledby="«rl»-day"
                  aria-readonly="false"
                  aria-valuemax="31"
                  aria-valuemin="1"
                  aria-valuetext="Empty"
                  autocapitalize="off"
                  autocorrect="off"
                  class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                  contenteditable="true"
                  id="«rl»-day"
                  inputmode="numeric"
                  role="spinbutton"
                  spellcheck="false"
                  tabindex="-1"
                >
                  DD
                </span>
                <span
                  class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                >
                  /
                </span>
              </span>
              <span
                class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
                data-sectionindex="2"
              >
                <span
                  class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
                <span
                  aria-disabled="false"
                  aria-label="Year"
                  aria-labelledby="«rl»-year"
                  aria-readonly="false"
                  aria-valuemax="9999"
                  aria-valuemin="0"
                  aria-valuetext="Empty"
                  autocapitalize="off"
                  autocorrect="off"
                  class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                  contenteditable="true"
                  id="«rl»-year"
                  inputmode="numeric"
                  role="spinbutton"
                  spellcheck="false"
                  tabindex="-1"
                >
                  YYYY
                </span>
                <span
                  class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                >
                   
                </span>
              </span>
              <span
                class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
                data-sectionindex="3"
              >
                <span
                  class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
                <span
                  aria-disabled="false"
                  aria-label="Hours"
                  aria-labelledby="«rl»-hours"
                  aria-readonly="false"
                  aria-valuemax="12"
                  aria-valuemin="1"
                  aria-valuetext="Empty"
                  autocapitalize="off"
                  autocorrect="off"
                  class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                  contenteditable="true"
                  id="«rl»-hours"
                  inputmode="numeric"
                  role="spinbutton"
                  spellcheck="false"
                  tabindex="-1"
                >
                  hh
                </span>
                <span
                  class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                >
                  :
                </span>
              </span>
              <span
                class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
                data-sectionindex="4"
              >
                <span
                  class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
                <span
                  aria-disabled="false"
                  aria-label="Minutes"
                  aria-labelledby="«rl»-minutes"
                  aria-readonly="false"
                  aria-valuemax="59"
                  aria-valuemin="0"
                  aria-valuetext="Empty"
                  autocapitalize="off"
                  autocorrect="off"
                  class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                  contenteditable="true"
                  id="«rl»-minutes"
                  inputmode="numeric"
                  role="spinbutton"
                  spellcheck="false"
                  tabindex="-1"
                >
                  mm
                </span>
                <span
                  class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                >
                   
                </span>
              </span>
              <span
                class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
                data-sectionindex="5"
              >
                <span
                  class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
                <span
                  aria-disabled="false"
                  aria-label="Meridiem"
                  aria-labelledby="«rl»-meridiem"
                  aria-readonly="false"
                  aria-valuemax="1"
                  aria-valuemin="0"
                  aria-valuetext="Empty"
                  autocapitalize="off"
                  autocorrect="off"
                  class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                  contenteditable="true"
                  id="«rl»-meridiem"
                  inputmode="text"
                  role="spinbutton"
                  spellcheck="false"
                  tabindex="-1"
                >
                  aa
                </span>
                <span
                  class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
                />
              </span>
            </div>
            <div
              class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
            >
              <button
                aria-label="Choose date"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1ysp02-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="CalendarIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                  />
                </svg>
              </button>
            </div>
            <fieldset
              aria-hidden="true"
              class="MuiPickersOutlinedInput-notchedOutline css-lqwr9g-MuiPickersOutlinedInput-notchedOutline"
            >
              <legend
                class="css-1pbc52w"
              >
                <span
                  class="css-w48gsk"
                >
                  Test
                   
                  *
                </span>
              </legend>
            </fieldset>
            <input
              aria-hidden="true"
              class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-31lcvl-MuiPickersInputBase-input"
              id="«rk»"
              name="date"
              required=""
              tabindex="-1"
              value=""
            />
          </div>
          <p
            class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-er619e-MuiFormHelperText-root"
            id="«rk»-helper-text"
          >
            date is a required field
          </p>
        </div>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
          data-testid="submit"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      novalidate=""
    >
      <div
        class="MuiFormControl-root MuiFormControl-fullWidth MuiPickersTextField-root Mui-required css-19y0qf7-MuiFormControl-root-MuiPickersTextField-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-19qnlrw-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="false"
          for="«rk»"
          id="«rk»-label"
        >
          Test
          <span
            aria-hidden="true"
            class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error css-1ljffdk-MuiFormLabel-asterisk"
          >
             
            *
          </span>
        </label>
        <div
          aria-describedby="«rk»-helper-text"
          aria-invalid="true"
          aria-labelledby="«rk»-label"
          aria-live="polite"
          class="MuiPickersInputBase-root MuiPickersOutlinedInput-root Mui-error MuiPickersInputBase-fullWidth MuiPickersInputBase-colorPrimary MuiPickersInputBase-adornedEnd css-1hgcujo-MuiPickersInputBase-root-MuiPickersOutlinedInput-root"
          role="group"
        >
          <div
            class="MuiPickersSectionList-root MuiPickersInputBase-sectionsContainer css-qru2u2-MuiPickersSectionList-root-MuiPickersInputBase-sectionsContainer-MuiPickersOutlinedInput-sectionsContainer"
            contenteditable="false"
            tabindex="0"
          >
            <span
              class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
              data-sectionindex="0"
            >
              <span
                class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
              <span
                aria-disabled="false"
                aria-label="Month"
                aria-labelledby="«rl»-month"
                aria-readonly="false"
                aria-valuemax="12"
                aria-valuemin="1"
                aria-valuetext="Empty"
                autocapitalize="off"
                autocorrect="off"
                class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                contenteditable="true"
                id="«rl»-month"
                inputmode="numeric"
                role="spinbutton"
                spellcheck="false"
                tabindex="0"
              >
                MM
              </span>
              <span
                class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              >
                /
              </span>
            </span>
            <span
              class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
              data-sectionindex="1"
            >
              <span
                class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
              <span
                aria-disabled="false"
                aria-label="Day"
                aria-labelledby="«rl»-day"
                aria-readonly="false"
                aria-valuemax="31"
                aria-valuemin="1"
                aria-valuetext="Empty"
                autocapitalize="off"
                autocorrect="off"
                class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                contenteditable="true"
                id="«rl»-day"
                inputmode="numeric"
                role="spinbutton"
                spellcheck="false"
                tabindex="-1"
              >
                DD
              </span>
              <span
                class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              >
                /
              </span>
            </span>
            <span
              class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
              data-sectionindex="2"
            >
              <span
                class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
              <span
                aria-disabled="false"
                aria-label="Year"
                aria-labelledby="«rl»-year"
                aria-readonly="false"
                aria-valuemax="9999"
                aria-valuemin="0"
                aria-valuetext="Empty"
                autocapitalize="off"
                autocorrect="off"
                class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                contenteditable="true"
                id="«rl»-year"
                inputmode="numeric"
                role="spinbutton"
                spellcheck="false"
                tabindex="-1"
              >
                YYYY
              </span>
              <span
                class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              >
                 
              </span>
            </span>
            <span
              class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
              data-sectionindex="3"
            >
              <span
                class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
              <span
                aria-disabled="false"
                aria-label="Hours"
                aria-labelledby="«rl»-hours"
                aria-readonly="false"
                aria-valuemax="12"
                aria-valuemin="1"
                aria-valuetext="Empty"
                autocapitalize="off"
                autocorrect="off"
                class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                contenteditable="true"
                id="«rl»-hours"
                inputmode="numeric"
                role="spinbutton"
                spellcheck="false"
                tabindex="-1"
              >
                hh
              </span>
              <span
                class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              >
                :
              </span>
            </span>
            <span
              class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
              data-sectionindex="4"
            >
              <span
                class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
              <span
                aria-disabled="false"
                aria-label="Minutes"
                aria-labelledby="«rl»-minutes"
                aria-readonly="false"
                aria-valuemax="59"
                aria-valuemin="0"
                aria-valuetext="Empty"
                autocapitalize="off"
                autocorrect="off"
                class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                contenteditable="true"
                id="«rl»-minutes"
                inputmode="numeric"
                role="spinbutton"
                spellcheck="false"
                tabindex="-1"
              >
                mm
              </span>
              <span
                class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              >
                 
              </span>
            </span>
            <span
              class="MuiPickersSectionList-section css-joz0rk-MuiPickersSectionList-section-MuiPickersInputBase-section"
              data-sectionindex="5"
            >
              <span
                class="MuiPickersInputBase-sectionBefore css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
              <span
                aria-disabled="false"
                aria-label="Meridiem"
                aria-labelledby="«rl»-meridiem"
                aria-readonly="false"
                aria-valuemax="1"
                aria-valuemin="0"
                aria-valuetext="Empty"
                autocapitalize="off"
                autocorrect="off"
                class="MuiPickersSectionList-sectionContent MuiPickersInputBase-sectionContent css-1jpopwz-MuiPickersSectionList-sectionContent-MuiPickersInputBase-sectionContent"
                contenteditable="true"
                id="«rl»-meridiem"
                inputmode="text"
                role="spinbutton"
                spellcheck="false"
                tabindex="-1"
              >
                aa
              </span>
              <span
                class="MuiPickersInputBase-sectionAfter css-w1q93y-MuiPickersSectionList-sectionSeparator-MuiPickersInputBase-separator"
              />
            </span>
          </div>
          <div
            class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
          >
            <button
              aria-label="Choose date"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1ysp02-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CalendarIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
                />
              </svg>
            </button>
          </div>
          <fieldset
            aria-hidden="true"
            class="MuiPickersOutlinedInput-notchedOutline css-lqwr9g-MuiPickersOutlinedInput-notchedOutline"
          >
            <legend
              class="css-1pbc52w"
            >
              <span
                class="css-w48gsk"
              >
                Test
                 
                *
              </span>
            </legend>
          </fieldset>
          <input
            aria-hidden="true"
            class="MuiPickersInputBase-input MuiPickersOutlinedInput-input css-31lcvl-MuiPickersInputBase-input"
            id="«rk»"
            name="date"
            required=""
            tabindex="-1"
            value=""
          />
        </div>
        <p
          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-er619e-MuiFormHelperText-root"
          id="«rk»-helper-text"
        >
          date is a required field
        </p>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-74d805-MuiButtonBase-root-MuiButton-root"
        data-testid="submit"
        tabindex="0"
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
